welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: illegal start of simple expression
	if (a>= 10+b || a>= 10+c || b>= 10+c || c>= 10 +a || c>= 10+b=){
                                                                      ^lessBy10:6: error: ')' expected but '}' found.
}
^